add copyright notic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,4 +14,9 @@
         {{ content }}
 
     </body>
+	<footer>
+        <div class="container">
+		  <p class="copyright">Copyright © Ruben Pieters 2017. All Rights Reserved.</p>
+        </div>
+	</footer>
 </html>
