--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css">
 		<link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
   
+        {% feed_meta %}
+  
 		{% if page.use_math %}
 			{% include mathjax_support %}
 		{% endif %}
