add atom feed button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css">
 		<link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
-  
+		
         {% feed_meta %}
   
 		{% if page.use_math %}
@@ -18,7 +18,8 @@
     <body>
 
         {{ content }}
-
+		
+        <a href="https://rubenpieters.github.io/feed.xml" class="feed"></a>
     </body>
 	<footer>
         <div class="container">
