--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,5 +1,5 @@
 /*
- * css for copyright notic
+ * css for copyright notice
  * http://stackoverflow.com/a/34229422/5559685
  */
 footer {
@@ -15,6 +15,12 @@ p.copyright {
     font-size: 0.7em;
     text-align: center;
     bottom:0;
+}
+
+.feed {
+  margin-left: 3px;
+  padding: 0 0 0 19px;
+  background: url("../images/feed-icon-14x14.png") no-repeat 0 50%;
 }
 
 /*
