update copyright notice

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     </body>
 	<footer>
         <div class="container">
-		  <p class="copyright">Copyright © Ruben Pieters 2017. All Rights Reserved.</p>
+		  <p class="copyright">Copyright © Ruben Pieters 2017-2018. All Rights Reserved.</p>
         </div>
 	</footer>
 </html>
