--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,3 +4,5 @@ layout: default
 <p>{{ page.date | date: "%B %d, %Y" }}</p>
 <h2>{{ page.title }}</h2>
 <div>{{ content }}</div>
+
+<a href="https://rubenpieters.github.io/feed.xml" class="feed"></a>
