--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,4 +1,35 @@
 /*
+ * style for navbar
+ */
+.navhead {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #333;
+}
+
+.navelem {
+	float: left;
+}
+
+.navelem a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+.navelem a:hover:not(.navactive) {
+	background-color: #111;
+}
+
+.navactive {
+	background-color: #4CAF50;
+}
+
+/*
  * css for copyright notice
  * http://stackoverflow.com/a/34229422/5559685
  */
