--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
         <link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css">
 		<link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
 		
