--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,16 +42,14 @@
 			let coll = document.getElementsByClassName("collapsible");
 
 			for (let i = 0; i < coll.length; i++) {
-			  coll[i].addEventListener("click", function() {
+				coll[i].addEventListener("click", function() {
 				this.classList.toggle("active");
 				const content = this.parentElement.nextElementSibling;
-				console.log(content);
-				console.log(content.style);
-				if (content.style.display === "block") {
-				  content.style.display = "none";
+				if (content.style.maxHeight){
+					content.style.maxHeight = null;
 				} else {
-				  content.style.display = "block";
-				}
+					content.style.maxHeight = content.scrollHeight + "px";
+				} 
 			  });
 			}
 		</script>
