--- a/css/syntax.css
+++ b/css/syntax.css
@@ -11,6 +11,7 @@
   text-align: left;
   outline: none;
   font-size: 25px;
+  transition: 0.4s;
 }
 
 .active, .collapsible:hover {
@@ -18,10 +19,12 @@
 }
 
 .content {
+  width: 75%;
   padding: 0 18px;
-  display: none;
   overflow: hidden;
   background-color: #f1f1f1;
+  max-height: 0;
+  transition: max-height 0.2s ease-out;
 }
 
 /*
